--- a/src/main/webapp/VAADIN/themes/apptheme/styles.css
+++ b/src/main/webapp/VAADIN/themes/apptheme/styles.css
@@ -13703,6 +13703,98 @@ div.v-layout.v-horizontal.v-widget {
 	border-radius: 0;
 }
 
+.apptheme .directorywindow {
+	max-height: 480px;
+	width: 560px;
+	max-width: 90%;
+}
+
+.apptheme .directorywindow .v-window-outerheader {
+	background-color: inherit;
+}
+
+.apptheme .directorywindow .v-tabsheet-content > div > .v-scrollable > .v-layout {
+	padding-left: 37px;
+	padding-right: 37px;
+}
+
+.apptheme .createfolder-window {
+	max-height: 160px;
+	width: 288px;
+	max-width: 90%;
+}
+
+.apptheme .confirm-window {
+	max-height: 160px;
+	width: 416px;
+	max-width: 90%;
+}
+
+.apptheme .v-button-borderButton {
+	background: #eee none repeat scroll 0 0;
+	border: 1px solid #b0b0b0;
+	border-radius: 0;
+	color: #181818;
+	cursor: pointer;
+	font-weight: 400;
+	outline: medium none;
+	position: relative;
+	text-align: center;
+	white-space: nowrap;
+}
+
+.apptheme .v-button-noBorderButton {
+	border: 1px solid #f0f0f0;
+	border-radius: 0;
+	color: #181818;
+	cursor: pointer;
+	font-weight: 400;
+	outline: medium none;
+	position: relative;
+	text-align: center;
+	white-space: nowrap;
+}
+
+.apptheme .v-button-labelColored {
+	border: none;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+	background: transparent;
+	color: #0072C6;
+	cursor: default !important;
+	opacity: 1;
+}
+
+.apptheme .v-button-labelColored:hover {
+	color: #0072C6;
+}
+
+.apptheme .v-button-labelColored:hover:after {
+	background: transparent;
+}
+
+.apptheme .v-button-labelColored:active {
+	opacity: 0.7;
+	filter: alpha(opacity = 70);
+}
+
+.apptheme .v-button-labelColored:active:after {
+	background: transparent;
+}
+
+.apptheme .v-button-labelColored.v-disabled {
+	opacity: 1;
+	filter: alpha(opacity = 50);
+}
+
+.apptheme .v-button-labelColored.v-disabled:after {
+	display: none;
+}
+
+.apptheme .InvisibleButton {
+	display: none;
+}
+
 .apptheme .loginview {
 	background-color: #fafafa;
 	background-image: -webkit-radial-gradient(50% 50%, circle, #f5f5f5, #e1e1e1);
@@ -13783,4 +13875,269 @@ div.v-layout.v-horizontal.v-widget {
 .apptheme .transactions .viewheader {
 	padding: 25px;
 	border-bottom: 1px solid #dfdfdf;
+}
+
+.apptheme .content .viewheader {
+	padding: 25px;
+	border-bottom: 1px solid #dfdfdf;
+}
+
+.apptheme .content .toolbar {
+	padding: 12.5px;
+}
+
+.apptheme .content .viewbar {
+	padding-left: 12.5px;
+	padding-right: 12.5px;
+}
+
+.apptheme .content .v-slot-gridView {
+	overflow: auto;
+}
+
+.apptheme .content .gridView {
+	padding: 12.5px;
+}
+
+.apptheme .content .gridView .mainPanel {
+	padding: 6px;
+}
+
+.apptheme .content .gridView .mainPanel .frame {
+	cursor: pointer;
+	padding: 7px;
+}
+
+.apptheme .content .gridView .mainPanel .frame:hover {
+	border-color: #197de1;
+	background-color: #f5f5f5;
+}
+
+.apptheme .content .gridView .mainPanel .frame .labelName {
+	font-size: 14px;
+	font-weight: 500;
+	padding-left: 10px;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	white-space: nowrap;
+}
+
+.apptheme .content .gridView .mainPanel .frame .labelInfo {
+	font-size: 12px;
+	padding-left: 10px;
+}
+
+.apptheme .content .gridView[width-range~="0-600px"] .mainPanel {
+	width: 100% !important;
+}
+
+.apptheme .content .gridView[width-range~="601px-1000px"] .mainPanel {
+	width: 50% !important;
+}
+
+.apptheme .content .gridView[width-range~="1001px-1920px"] .mainPanel {
+	width: 25% !important;
+}
+
+.apptheme .content .listView {
+	padding-top: 7px;
+	padding-bottom: 12.5px;
+	padding-left: 12.5px;
+	padding-right: 12.5px;
+}
+
+.apptheme .deleteBtn {
+	width: 16px;
+	height: 19px;
+	color: #197de1;
+	font-weight: 600;
+	font-size: 18px;
+	line-height: 1;
+	text-align: center;
+	cursor: default;
+}
+
+.apptheme .deleteBtn:hover {
+	background: #e3f2fd;
+}
+
+.apptheme .deleteBtn:focus {
+	outline: none;
+}
+
+.apptheme .deleteBtn:active {
+	background: #ffffff;
+}
+
+.apptheme .attachedlayout {
+	cursor: pointer;
+	position: relative;
+	padding-right: 20px;
+}
+
+.apptheme .attachedlayout .deleteBtn {
+	position: absolute;
+	display: none;
+}
+
+.apptheme .attachedlayout:hover {
+	outline: 1px solid #5198df;
+}
+
+.apptheme .attachedlayout:hover .deleteBtn {
+	display: block;
+}
+
+.apptheme .address-editor {
+	cursor: text;
+}
+
+.apptheme .address-editor .v-textfield {
+	border: 0px solid white;
+}
+
+.apptheme .address-editor .v-textfield:focus {
+	-webkit-box-shadow: none;
+	box-shadow: none;
+}
+
+.apptheme .v-widget.mytoken.tokenfield .v-button-link {
+	background-color: white;
+	text-decoration: none;
+}
+
+.apptheme .v-widget.mytoken.tokenfield .v-button-link:focus {
+	background-color: white;
+	text-decoration: none;
+}
+
+.apptheme .v-widget.mytoken.tokenfield .v-button-emphasize {
+	background-color: #ec0c6d;
+}
+
+.apptheme .v-widget.mytoken.tokenfield .v-button-emphasize:focus {
+	background-color: #ec0c6d;
+}
+
+.apptheme .v-widget.mytoken.tokenfield .v-button-link .v-button-caption {
+	color: #197de1;
+	text-decoration: none;
+}
+
+.apptheme .v-widget.mytoken.tokenfield .v-csslayout div {
+	float: left;
+}
+
+.apptheme .v-widget.mytoken.tokenfield .v-csslayout .v-button-link {
+	margin: 0 1px 1px 0;
+	height: 37px;
+}
+
+.apptheme .tokentextfield .v-filterselect {
+	background: #ddd none repeat scroll 0 0;
+	border-radius: 4px;
+	margin-bottom: 1px;
+}
+
+.apptheme .tokentextfield .v-filterselect .v-filterselect-input {
+	background: white none repeat scroll 0 0;
+	border: 1px solid white;
+	box-shadow: 0 1px 0 white inset, 0 1px 0 rgba(255, 255, 255, 0.1);
+}
+
+.apptheme .tokentextfield .v-filterselect .v-filterselect-input:focus {
+	box-shadow: none;
+}
+
+.apptheme .tokentextfield .v-filterselect .v-filterselect-button {
+	display: none;
+}
+
+.apptheme .v-table-header {
+	color: #434343;
+	background: #fff;
+}
+
+.apptheme .v-table-caption-container, .apptheme .v-table-header-drag {
+	border-left: 1px solid #f8f8f8;
+}
+
+.apptheme .v-table, .apptheme .v-table-table {
+	background: #fff;
+}
+
+.apptheme .v-table-row:hover, .apptheme .v-table-row-odd:hover {
+	background: #F6FAFD;
+}
+
+.apptheme .v-table-cell-wrapper {
+	user-select: none;
+	-o-user-select: none;
+	-moz-user-select: none;
+	-khtml-user-select: none;
+	-webkit-user-select: none;
+}
+
+.apptheme .v-table-focus {
+	outline: 1px solid #F6FAFD;
+}
+
+.apptheme .v-table-compact .v-table-cell-content, .apptheme .v-table-small .v-table-cell-content {
+	height: 51.5px;
+}
+
+.apptheme .v-table tr.v-selected.v-selected {
+	color: #434343;
+	background: #E8F3FA;
+}
+
+.apptheme .v-table-cell-content-black {
+	background: black;
+	color: black;
+}
+
+.apptheme .v-label-noselect {
+	user-select: none;
+	-o-user-select: none;
+	-moz-user-select: none;
+	-khtml-user-select: none;
+	-webkit-user-select: none;
+}
+
+.apptheme .v-menubar-btn-contextmenu {
+	border: 1px solid #eee;
+	border-radius: 0px;
+	background: #fff;
+	box-shadow: none;
+	background-image: none;
+}
+
+.apptheme .v-menubar-btn-contextmenu:focus:after {
+	border: 1px solid #eee;
+	box-shadow: none;
+	background-image: none;
+}
+
+.apptheme .v-menubar-btn-contextmenu  > .v-menubar-menuitem-selected {
+	border: 1px solid #eee;
+	background: #f7f7f7;
+	color: #181818;
+	box-shadow: none;
+}
+
+.apptheme .v-menubar-btn-contextmenu  > .v-menubar-menuitem .v-icon {
+	margin: 0px;
+	cursor: inherit;
+}
+
+.apptheme .v-menubar-btn-contextmenu .v-menubar-submenu-indicator {
+	display: none;
+}
+
+.apptheme .v-menubar-btn-contextmenu .v-menubar-submenu-indicator  + .v-menubar-menuitem-caption:after {
+	display: none;
+}
+
+.apptheme .v-menubar-btn-contextmenu .v-menubar-submenu-indicator  + .v-menubar-menuitem-caption:empty:after {
+	display: none;
 }
