--- a/src/main/webapp/VAADIN/themes/apptheme/apptheme.scss
+++ b/src/main/webapp/VAADIN/themes/apptheme/apptheme.scss
@@ -43,7 +43,7 @@ $v-included-components: remove($v-included-components, progressbar);
 $v-included-components: remove($v-included-components, slider);
 $v-included-components: remove($v-included-components, splitpanel);
 $v-included-components: remove($v-included-components, table);
-$v-included-components: remove($v-included-components, tree);
+//$v-included-components: remove($v-included-components, tree);
 $v-included-components: remove($v-included-components, treetable);
 $v-included-components: remove($v-included-components, twincolselect);
 
