Se termino FileListLayout

--- a/src/main/webapp/VAADIN/themes/apptheme/common.scss
+++ b/src/main/webapp/VAADIN/themes/apptheme/common.scss
@@ -205,8 +205,8 @@
         }
 
         .v-tabsheet-content > div > .v-scrollable > .v-layout {
-            padding-left: $v-layout-margin-left;
-            padding-right: $v-layout-margin-right;
+            //padding-left: $v-layout-margin-left;
+            //padding-right: $v-layout-margin-right;
         }
     }
     
