--- a/src/main/webapp/VAADIN/themes/apptheme/common.scss
+++ b/src/main/webapp/VAADIN/themes/apptheme/common.scss
@@ -222,7 +222,7 @@
         max-width: 90%;
     }
 
-    .v-button-borderButton {
+/*    .v-button-borderButton {
         background: #eee none repeat scroll 0 0;
         border: 1px solid #b0b0b0;
         border-radius: 0;
@@ -245,48 +245,97 @@
         position: relative;
         text-align: center;
         white-space: nowrap;
+    }*/
+
+    $pathColor:  #197de1 ;
+
+    .v-button-btnPath {
+        /*@include  valo-button-borderless-style($font-color: $pathColor);*/
+        border: none;
+        padding: 0;
+        @include box-shadow(none);
+        background: transparent;
+        color: $pathColor;
+
+        &:hover {
+            &:after {
+                background: transparent;
+            }
+            color: $pathColor;
+        }
+        
+        &:focus{
+            &:after {
+                @include box-shadow(none);
+            }
+        }
+
+        &:active {
+            @include opacity(1);
+            &:after {
+                background: transparent;
+            }
+        }
     }
 
     .v-button-labelColored {
-        border: none;
-        -webkit-box-shadow: none;
-        box-shadow: none;
-        background: transparent;
-        color: #0072C6;
-        cursor: default !important;
-        opacity: 1;
         &:hover {
-            color: #0072C6;
+            color: $pathColor;
+        }
+        &:focus{
             &:after {
-                background: transparent;
+                @include box-shadow(none);
             }
         }
-        &:active {
-            opacity: 0.7;
-            filter: alpha(opacity = 70);
+        cursor: default !important;
+        &.v-disabled {
+            @include opacity(1);
             &:after {
-                background: transparent;
+                display: none;
             }
         }
     }
 
-    .v-button-labelColored.v-disabled {
-        opacity: 1;
-        filter: alpha(opacity = 50);
-        &:after {
-            display: none;
+    /*    .v-button-labelColored {
+            border: none;
+            -webkit-box-shadow: none;
+            box-shadow: none;
+            background: transparent;
+            color: #0072C6;
+            cursor: default !important;
+            opacity: 1;
+            &:hover {
+                color: #0072C6;
+                &:after {
+                    background: transparent;
+                }
+            }
+            &:active {
+                opacity: 0.7;
+                filter: alpha(opacity = 70);
+                &:after {
+                    background: transparent;
+                }
+            }
         }
-    }
+    
+        .v-button-labelColored.v-disabled {
+            opacity: 1;
+            filter: alpha(opacity = 50);
+            &:after {
+                display: none;
+            }
+        }*/
 
     .InvisibleButton {
         display: none;
     }
 
-        .treeApp {
-            .v-tree8-row-focused::before {
-                border: none;
-            }
+    .treeApp {
+        .v-tree8-row-focused::before {
+            border: none;
         }
+    }
 
     .rowSelected  .v-tree8-row-focused {
         >  .v-tree8-cell {
