--- a/src/main/webapp/VAADIN/themes/apptheme/common.scss
+++ b/src/main/webapp/VAADIN/themes/apptheme/common.scss
@@ -222,30 +222,30 @@
         max-width: 90%;
     }
 
-/*    .v-button-borderButton {
-        background: #eee none repeat scroll 0 0;
-        border: 1px solid #b0b0b0;
-        border-radius: 0;
-        color: #181818;
-        cursor: pointer;
-        font-weight: 400;
-        outline: medium none;
-        position: relative;
-        text-align: center;
-        white-space: nowrap;
-    }
-
-    .v-button-noBorderButton {
-        border: 1px solid #f0f0f0;
-        border-radius: 0;
-        color: #181818;
-        cursor: pointer;
-        font-weight: 400;
-        outline: medium none;
-        position: relative;
-        text-align: center;
-        white-space: nowrap;
-    }*/
+    /*    .v-button-borderButton {
+            background: #eee none repeat scroll 0 0;
+            border: 1px solid #b0b0b0;
+            border-radius: 0;
+            color: #181818;
+            cursor: pointer;
+            font-weight: 400;
+            outline: medium none;
+            position: relative;
+            text-align: center;
+            white-space: nowrap;
+        }
+    
+        .v-button-noBorderButton {
+            border: 1px solid #f0f0f0;
+            border-radius: 0;
+            color: #181818;
+            cursor: pointer;
+            font-weight: 400;
+            outline: medium none;
+            position: relative;
+            text-align: center;
+            white-space: nowrap;
+        }*/
 
     $pathColor:  #197de1 ;
 
@@ -263,7 +263,7 @@
             }
             color: $pathColor;
         }
-        
+
         &:focus{
             &:after {
                 @include box-shadow(none);
@@ -352,5 +352,37 @@
             -khtml-user-select: none;
             -webkit-user-select: none;
         }
+    }
+
+    // sidebar editor for CRUD, scrolls if there is not enough space vertically
+    $editor-background-color: #3b3f42 !default;
+    $editor-shadow: 0 0 10px 10px rgba(0,0,0,.1) !default;
+    .product-form-wrapper {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        z-index: 100;
+        width: round($v-unit-size * 9);
+        height: 100%;
+        overflow: auto;
+        padding: $v-layout-spacing-vertical $v-layout-spacing-horizontal;
+        background-color: $editor-background-color;
+        color: valo-font-color($editor-background-color, 0.8);
+
+        // Set the context color for the style mixins
+        $temp: $v-app-background-color;
+        $v-app-background-color: $editor-background-color;
+    }
+
+    .product-form {
+        right: 0;
+        @include transition(all 300ms);
+        @include transform(translatex(100%));
+    }
+
+    // Enables animation for opening CRUD editor
+    .visible {
+        @include transform(none);
+        @include box-shadow($editor-shadow);
     }
 }
