--- a/src/main/webapp/VAADIN/themes/apptheme/styles.css
+++ b/src/main/webapp/VAADIN/themes/apptheme/styles.css
@@ -13950,10 +13950,45 @@ div.v-layout.v-horizontal.v-widget {
 	-webkit-user-select: none;
 }
 
+.apptheme .product-form-wrapper {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	z-index: 100;
+	width: 333px;
+	height: 100%;
+	overflow: auto;
+	padding: 12px 12px;
+	background-color: #3b3f42;
+	color: #d7d9da;
+}
+
+.apptheme .product-form {
+	right: 0;
+	-webkit-transition: all 300ms;
+	-moz-transition: all 300ms;
+	transition: all 300ms;
+	-webkit-transform: translatex(100%);
+	-moz-transform: translatex(100%);
+	-ms-transform: translatex(100%);
+	-o-transform: translatex(100%);
+	transform: translatex(100%);
+}
+
+.apptheme .visible {
+	-webkit-transform: none;
+	-moz-transform: none;
+	-ms-transform: none;
+	-o-transform: none;
+	transform: none;
+	-webkit-box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.1);
+}
+
 .apptheme .loginview {
-	background-color: #fafafa;
-	background-image: -webkit-radial-gradient(50% 50%, circle, #f5f5f5, #e1e1e1);
-	background-image: radial-gradient(  circle at 50% 50%, #f5f5f5, #e1e1e1);
+	background-color: #3b3f42;
+	background-image: -webkit-radial-gradient(50% 50%, circle, #3a3e41, #35393b);
+	background-image: radial-gradient(  circle at 50% 50%, #3a3e41, #35393b);
 	padding-top: 0 !important;
 	-webkit-animation: valo-animate-in-fade 300ms 10ms backwards;
 	-moz-animation: valo-animate-in-fade 300ms 10ms backwards;
@@ -13968,7 +14003,7 @@ div.v-layout.v-horizontal.v-widget {
 	background: white;
 	color: #474747;
 	border-radius: 4px;
-	border: 1px solid #d5d5d5;
+	border: 1px solid #323538;
 	-webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.05);
 	box-shadow: 0 2px 3px rgba(0, 0, 0, 0.05);
 	padding: 25px 25px;
@@ -14030,6 +14065,13 @@ div.v-layout.v-horizontal.v-widget {
 .apptheme .transactions .viewheader {
 	padding: 25px;
 	border-bottom: 1px solid #dfdfdf;
+}
+
+.apptheme .transactions .form-settings {
+	padding-bottom: 25px;
+	padding-left: 25px;
+	padding-right: 25px;
+	padding-top: 12.5px;
 }
 
 .apptheme .content .viewheader {
